# vim-just

./: .gitignore  CONTRIBUTING.md  LICENSE  README  README.md  justfile
.github/workflows/: build.yaml
after/ftplugin/: just.vim
ftdetect/: just.lua  just.vim
ftplugin/: just.vim
indent/: just.vim
syntax/: just.vim
tests/: Cargo.toml  batch_ftdetect_res.vim  convert-to-html.vim  justfile  rustfmt.toml
tests/cases/: alias.html  alias.just  comment.html  comment.just  deprecated_obsolete.html  deprecated_obsolete.just  directories.html  directories.just  export.html  export.just  expressions.html  expressions.just  ftdetect.json  ftdetect.yml  functions.html  functions.just  import.html  import.just  include.html  include.just  invalid.html  invalid.just  kitchen-sink.html  kitchen-sink.just  line-continuations.html  line-continuations.just  mod.html  mod.just  multi-line-recipe.html  multi-line-recipe.just  recipe-all.html  recipe-all.just  recipe-at.html  recipe-at.just  recipe-body-line-continuation.html  recipe-body-line-continuation.just  recipe-dependency.html  recipe-line-at.html  recipe-line-at.just  recipe-line-dash.html  (+21 more)
tests/src/: common.rs  main.rs  test-ftdetect.rs
