[package]
name    = "tests"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>", "Noah Bogart <noah.bogart@hey.com"]
edition = "2021"
default-run = "tests"

[[bin]]
name = "test-ftdetect"
path = "src/test-ftdetect.rs"

[dependencies]
clap         = { version = "4.5.4", features = ["derive"] }
ctrlc        = "3.4.4"
fancy-regex  = "0.13.0"
once_cell    = "1.19.0"
rand         = "0.8.5"
rayon        = "1.10.0"
serde        = { version = "1.0.197", features = ["derive"] }
serde_yaml   = "0.9.31"
similar      = "2.5.0"
tempfile     = "3.10.1"
wait-timeout = "0.2.0"
