[package]
name    = "tests"
authors = ["Casey Rodarmor <casey@rodarmor.com>", "Noah Bogart <noah.bogart@hey.com"]
edition = "2024"
default-run = "tests"

[[bin]]
name = "test-ftdetect"
path = "src/test-ftdetect.rs"

[lints.clippy]
get_unwrap = "warn"
used_underscore_binding = "deny"

[dependencies]
ctrlc        = "3.5.2"
fancy-regex  = "0.18.0"
rand         = "0.10.1"
rayon        = "1.12.0"
serde        = { version = "1.0.228", features = ["derive"] }
serde_yaml2  = "0.1.3"
similar      = "3.1.0"
tempfile     = "3.27.0"
wait-timeout = "0.2.1"
